muffin-wallet/virtual-service-wallet.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: muffin-wallet
  namespace: default
spec:
  hosts:
    - muffin-wallet.com
  gateways:
    - ilyatyamin-muffin-istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: muffin-wallet
            port:
              number: 8081
